--- a/Pendataan Satwa Liar/Pendataan Satwa Liar.csproj
+++ b/Pendataan Satwa Liar/Pendataan Satwa Liar.csproj
@@ -62,7 +62,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite, Version=1.0.119.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
@@ -86,44 +88,89 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form Data Satwa.cs">
+    <Compile Include="Controller\AuthController.cs" />
+    <Compile Include="Controller\HabitatController.cs" />
+    <Compile Include="Controller\JenisSatwaController.cs" />
+    <Compile Include="Controller\LaporanController.cs" />
+    <Compile Include="Controller\SatwaController.cs" />
+    <Compile Include="Controller\UserController.cs" />
+    <Compile Include="Controller\VerifikasiLaporanController.cs" />
+    <Compile Include="Model\DbContext.cs" />
+    <Compile Include="Model\Entities\Habitat.cs" />
+    <Compile Include="Model\Entities\JenisSatwa.cs" />
+    <Compile Include="Model\Entities\LaporanSatwa.cs" />
+    <Compile Include="Model\Entities\Satwa.cs" />
+    <Compile Include="Model\Entities\User.cs" />
+    <Compile Include="Model\Repository\HabitatRepo.cs" />
+    <Compile Include="Model\Repository\JenisSatwaRepo.cs" />
+    <Compile Include="Model\Repository\LaporanRepo.cs" />
+    <Compile Include="Model\Repository\SatwaRepo.cs" />
+    <Compile Include="Model\Repository\UserRepo.cs" />
+    <Compile Include="View\FormDataSatwa.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form Data Satwa.Designer.cs">
-      <DependentUpon>Form Data Satwa.cs</DependentUpon>
+    <Compile Include="View\FormDataSatwa.Designer.cs">
+      <DependentUpon>FormDataSatwa.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form Habitat.cs">
+    <Compile Include="View\FormHabitat.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form Habitat.Designer.cs">
-      <DependentUpon>Form Habitat.cs</DependentUpon>
+    <Compile Include="View\FormHabitat.Designer.cs">
+      <DependentUpon>FormHabitat.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form Jenis Satwa.cs">
+    <Compile Include="View\FormJenisSatwa.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form Jenis Satwa.Designer.cs">
-      <DependentUpon>Form Jenis Satwa.cs</DependentUpon>
+    <Compile Include="View\FormJenisSatwa.Designer.cs">
+      <DependentUpon>FormJenisSatwa.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form User.cs">
+    <Compile Include="View\FormLaporanAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form User.Designer.cs">
-      <DependentUpon>Form User.cs</DependentUpon>
+    <Compile Include="View\FormLaporanAdmin.Designer.cs">
+      <DependentUpon>FormLaporanAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormLaporanUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormLaporanUser.Designer.cs">
+      <DependentUpon>FormLaporanUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormUser.Designer.cs">
+      <DependentUpon>FormUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Koneksi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form Data Satwa.resx">
-      <DependentUpon>Form Data Satwa.cs</DependentUpon>
+    <Compile Include="View\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="View\FormDataSatwa.resx">
+      <DependentUpon>FormDataSatwa.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form Habitat.resx">
-      <DependentUpon>Form Habitat.cs</DependentUpon>
+    <EmbeddedResource Include="View\FormHabitat.resx">
+      <DependentUpon>FormHabitat.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form Jenis Satwa.resx">
-      <DependentUpon>Form Jenis Satwa.cs</DependentUpon>
+    <EmbeddedResource Include="View\FormJenisSatwa.resx">
+      <DependentUpon>FormJenisSatwa.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form User.resx">
-      <DependentUpon>Form User.cs</DependentUpon>
+    <EmbeddedResource Include="View\FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\FormUser.resx">
+      <DependentUpon>FormUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -134,6 +181,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -148,6 +198,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.119.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
