--- a/Pendataan Satwa Liar/Pendataan Satwa Liar.csproj
+++ b/Pendataan Satwa Liar/Pendataan Satwa Liar.csproj
@@ -141,17 +141,17 @@
     <Compile Include="View\FormDataSatwa.Designer.cs">
       <DependentUpon>FormDataSatwa.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\FormHabitat.cs">
+    <Compile Include="View\FormKelolaHabitat.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\FormHabitat.Designer.cs">
-      <DependentUpon>FormHabitat.cs</DependentUpon>
+    <Compile Include="View\FormKelolaHabitat.Designer.cs">
+      <DependentUpon>FormKelolaHabitat.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\FormJenisSatwa.cs">
+    <Compile Include="View\FormKelolaJenis.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\FormJenisSatwa.Designer.cs">
-      <DependentUpon>FormJenisSatwa.cs</DependentUpon>
+    <Compile Include="View\FormKelolaJenis.Designer.cs">
+      <DependentUpon>FormKelolaJenis.cs</DependentUpon>
     </Compile>
     <Compile Include="View\FormLaporanAdmin.cs">
       <SubType>Form</SubType>
@@ -165,11 +165,11 @@
     <Compile Include="View\FormLaporanUser.Designer.cs">
       <DependentUpon>FormLaporanUser.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\FormMain.cs">
+    <Compile Include="View\FormTambahSatwa.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <Compile Include="View\FormTambahSatwa.Designer.cs">
+      <DependentUpon>FormTambahSatwa.cs</DependentUpon>
     </Compile>
     <Compile Include="View\FormUser.cs">
       <SubType>Form</SubType>
@@ -195,14 +195,11 @@
     <EmbeddedResource Include="View\FormDataSatwa.resx">
       <DependentUpon>FormDataSatwa.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\FormHabitat.resx">
-      <DependentUpon>FormHabitat.cs</DependentUpon>
+    <EmbeddedResource Include="View\FormKelolaHabitat.resx">
+      <DependentUpon>FormKelolaHabitat.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\FormJenisSatwa.resx">
-      <DependentUpon>FormJenisSatwa.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <EmbeddedResource Include="View\FormKelolaJenis.resx">
+      <DependentUpon>FormKelolaJenis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\FormUser.resx">
       <DependentUpon>FormUser.cs</DependentUpon>
