--- a/Pendataan Satwa Liar/Pendataan Satwa Liar.csproj
+++ b/Pendataan Satwa Liar/Pendataan Satwa Liar.csproj
@@ -121,10 +121,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\AuthController.cs" />
+    <Compile Include="Controller\EditSatwaController.cs" />
     <Compile Include="Controller\HabitatController.cs" />
     <Compile Include="Controller\JenisSatwaController.cs" />
     <Compile Include="Controller\LaporanController.cs" />
     <Compile Include="Controller\SatwaController.cs" />
+    <Compile Include="Controller\TambahSatwaController.cs" />
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Controller\VerifikasiLaporanController.cs" />
     <Compile Include="Model\Context\DbContext.cs" />
@@ -143,6 +145,18 @@
     </Compile>
     <Compile Include="View\FormDataSatwa.Designer.cs">
       <DependentUpon>FormDataSatwa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormEditLaporan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormEditLaporan.Designer.cs">
+      <DependentUpon>FormEditLaporan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\FormEditSatwa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormEditSatwa.Designer.cs">
+      <DependentUpon>FormEditSatwa.cs</DependentUpon>
     </Compile>
     <Compile Include="View\FormKelolaHabitat.cs">
       <SubType>Form</SubType>
@@ -203,6 +217,12 @@
     </Compile>
     <EmbeddedResource Include="View\FormDataSatwa.resx">
       <DependentUpon>FormDataSatwa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\FormEditLaporan.resx">
+      <DependentUpon>FormEditLaporan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\FormEditSatwa.resx">
+      <DependentUpon>FormEditSatwa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\FormKelolaHabitat.resx">
       <DependentUpon>FormKelolaHabitat.cs</DependentUpon>
